--- a/package.json
+++ b/package.json
@@ -31,18 +31,23 @@
       "@nestjs/config": "^1.1.6",
       "@nestjs/core": "^8.0.0",
       "@nestjs/graphql": "^9.1.2",
+      "@nestjs/microservices": "^8.2.6",
       "@nestjs/platform-express": "^8.0.0",
+      "@nestjs/platform-socket.io": "^8.2.6",
       "@nestjs/typeorm": "^8.0.2",
+      "@nestjs/websockets": "^8.2.6",
       "apollo-server-express": "^3.6.1",
       "class-transformer": "^0.4.0",
       "class-validator": "^0.11.1",
       "graphql": "^15.8.0",
+      "ioredis": "^4.28.3",
       "mysql": "^2.14.1",
       "node": "^12.22.8",
       "pg": "^8.7.1",
       "reflect-metadata": "^0.1.10",
       "rimraf": "^3.0.2",
       "rxjs": "^7.5.2",
+      "socket.io": "^4.4.1",
       "ts-morph": "^13.0.2",
       "typeorm": "0.2.41"
    },
@@ -51,6 +56,7 @@
       "@nestjs/schematics": "^8.0.0",
       "@nestjs/testing": "^8.0.0",
       "@types/express": "^4.17.13",
+      "@types/ioredis": "^4.28.7",
       "@types/jest": "27.0.2",
       "@types/node": "^17.0.8",
       "@types/supertest": "^2.0.11",
