--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
       "class-transformer": "^0.4.0",
       "class-validator": "^0.11.1",
       "graphql": "^15.8.0",
+      "graphql-redis-subscriptions": "^2.4.2",
       "ioredis": "^4.28.3",
       "mysql": "^2.14.1",
       "node": "^12.22.8",
