--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3.8'
 
 services:
+zoo1:
 api:
     build:
       dockerfile: Dockerfile
       context: .
     ports:
       - 8080:3000
-      - 9229:9229
     command: yarn start:debug
 volumes:
-      - /app/node_modues
-      - ./src:/app/src
+      - /type-orm/node_modues
+      - ./src
 depends_on:
       - redis
 env_file: .env
