--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "target": "ES2017",
       // "target": "es5",
       "module": "commonjs",
+      "esModuleInterop": true,
       "baseUrl": "./",
       "moduleResolution": "node",
       "outDir": "./build",
