--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
       "@nestjs/platform-socket.io": "^8.2.6",
       "@nestjs/typeorm": "^8.0.2",
       "@nestjs/websockets": "^8.2.6",
+      "apollo-server-core": "^3.6.2",
       "apollo-server-express": "^3.6.1",
       "class-transformer": "^0.4.0",
       "class-validator": "^0.11.1",
       "graphql": "^15.8.0",
       "graphql-redis-subscriptions": "^2.4.2",
+      "graphql-subscriptions": "^2.0.0",
       "ioredis": "^4.28.3",
       "mysql": "^2.14.1",
       "node": "^12.22.8",
